--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "omit-keys",
+  "name": "object-omit",
   "description": "Return a copy of an object without the given keys.",
-  "version": "0.1.0",
-  "homepage": "https://github.com/jonschlinkert/omit-keys",
+  "version": "0.1.1",
+  "homepage": "https://github.com/jonschlinkert/object-omit",
   "author": {
     "name": "Jon Schlinkert",
     "url": "https://github.com/jonschlinkert"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jonschlinkert/omit-keys.git"
+    "url": "git://github.com/jonschlinkert/object-omit.git"
   },
   "bugs": {
-    "url": "https://github.com/jonschlinkert/omit-keys/issues"
+    "url": "https://github.com/jonschlinkert/object-omit/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/jonschlinkert/omit-keys/blob/master/LICENSE-MIT"
+      "url": "https://github.com/jonschlinkert/object-omit/blob/master/LICENSE-MIT"
     }
   ],
   "main": "index.js",
@@ -48,7 +48,7 @@
     "utils"
   ],
   "dependencies": {
-    "array-difference": "0.0.1",
+    "arr-diff": "^0.1.0",
     "isobject": "^0.2.0"
   }
 }
