--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "object-omit",
-  "description": "Return a copy of an object without the given keys.",
-  "version": "0.2.0",
+  "description": "Return a copy of an object without the given key, or array of keys.",
+  "version": "1.0.0",
   "homepage": "https://github.com/jonschlinkert/object-omit",
   "author": {
     "name": "Jon Schlinkert",
@@ -17,44 +17,35 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/jonschlinkert/object-omit/blob/master/LICENSE-MIT"
+      "url": "https://github.com/jonschlinkert/object-omit/blob/master/LICENSE"
     }
+  ],
+  "files": [
+    "index.js"
   ],
   "main": "index.js",
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "mocha"
+  },
+  "dependencies": {
+    "for-own": "^0.1.2",
+    "isobject": "^0.2.0"
   },
   "devDependencies": {
-    "verb-tag-jscomments": ">= 0.2.0",
-    "verb": ">= 0.2.6",
-    "mocha": "*"
+    "mocha": "*",
+    "should": "^5.0.0"
   },
   "keywords": [
-    "clean",
     "clear",
-    "copy",
-    "dash",
     "delete",
-    "javascript",
-    "js",
     "key",
-    "lo",
-    "lo-dash",
-    "lodash",
+    "value",
     "object",
     "omit",
     "property",
-    "remove",
-    "underscore",
-    "util",
-    "utilities",
-    "utils"
-  ],
-  "dependencies": {
-    "for-own": "^0.1.1",
-    "isobject": "^0.2.0"
-  }
+    "remove"
+  ]
 }
