--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "object.omit",
   "description": "Return a copy of an object without the given key, or array of keys.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "homepage": "https://github.com/jonschlinkert/object.omit",
   "author": {
     "name": "Jon Schlinkert",
@@ -28,14 +28,6 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {
-    "for-own": "^0.1.2",
-    "isobject": "^0.2.0"
-  },
-  "devDependencies": {
-    "mocha": "*",
-    "should": "^5.0.0"
-  },
   "keywords": [
     "clear",
     "delete",
@@ -45,5 +37,13 @@
     "omit",
     "property",
     "remove"
-  ]
+  ],
+  "dependencies": {
+    "for-own": "^0.1.3",
+    "isobject": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.4",
+    "should": "^5.2.0"
+  }
 }
