--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "object.omit",
-  "description": "Return a copy of an object without the given key, or array of keys.",
-  "version": "1.1.0",
+  "description": "Return a copy of an object excluding the given key, or array of keys. Also accepts an optional filter function as the last argument.",
+  "version": "2.0.0",
   "homepage": "https://github.com/jonschlinkert/object.omit",
-  "author": {
-    "name": "Jon Schlinkert",
-    "url": "https://github.com/jonschlinkert"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jonschlinkert/object.omit.git"
-  },
+  "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "repository": "jonschlinkert/object.omit",
   "bugs": {
     "url": "https://github.com/jonschlinkert/object.omit/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/jonschlinkert/object.omit/blob/master/LICENSE"
-  },
+  "license": "MIT",
   "files": [
     "index.js"
   ],
@@ -28,6 +19,25 @@
   "scripts": {
     "test": "mocha"
   },
+  "dependencies": {
+    "for-own": "^0.1.3",
+    "is-extendable": "^0.1.1"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "should": "*"
+  },
+  "verb": {
+    "related": {
+      "list": [
+        "object.filter",
+        "object.pick",
+        "object.pluck",
+        "object.reduce",
+        "object.defaults"
+      ]
+    }
+  },
   "keywords": [
     "clear",
     "delete",
@@ -37,13 +47,5 @@
     "omit",
     "property",
     "remove"
-  ],
-  "dependencies": {
-    "for-own": "^0.1.3",
-    "isobject": "^1.0.0"
-  },
-  "devDependencies": {
-    "mocha": "^2.2.4",
-    "should": "^5.2.0"
-  }
+  ]
 }
