--- a/package.json
+++ b/package.json
@@ -20,32 +20,48 @@
     "test": "mocha"
   },
   "dependencies": {
-    "for-own": "^0.1.3",
+    "for-own": "^0.1.4",
     "is-extendable": "^0.1.1"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*"
-  },
-  "verb": {
-    "related": {
-      "list": [
-        "object.filter",
-        "object.pick",
-        "object.pluck",
-        "object.reduce",
-        "object.defaults"
-      ]
-    }
+    "gulp-format-md": "^0.1.11",
+    "mocha": "^3.1.2",
+    "should": "^11.1.1"
   },
   "keywords": [
     "clear",
     "delete",
     "key",
-    "value",
     "object",
     "omit",
     "property",
-    "remove"
-  ]
+    "remove",
+    "value"
+  ],
+  "verb": {
+    "related": {
+      "list": [
+        "object.defaults",
+        "object.filter",
+        "object.pick",
+        "object.pluck",
+        "object.reduce"
+      ]
+    },
+    "toc": false,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
+    "lint": {
+      "reflinks": true
+    },
+    "reflinks": [
+      "verb",
+      "verb-generate-readme"
+    ]
+  }
 }
