--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "2.0.1",
   "homepage": "https://github.com/jonschlinkert/object.omit",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "contributors": [
+    "Federico Brigante (https://twitter.com/bfred_it)",
+    "Jon Schlinkert (http://twitter.com/jonschlinkert)"
+  ],
   "repository": "jonschlinkert/object.omit",
   "bugs": {
     "url": "https://github.com/jonschlinkert/object.omit/issues"
@@ -20,13 +24,12 @@
     "test": "mocha"
   },
   "dependencies": {
-    "for-own": "^0.1.4",
-    "is-extendable": "^0.1.1"
+    "for-own": "^1.0.0",
+    "is-extendable": "^1.0.0"
   },
   "devDependencies": {
-    "gulp-format-md": "^0.1.11",
-    "mocha": "^3.1.2",
-    "should": "^11.1.1"
+    "gulp-format-md": "^1.0.0",
+    "mocha": "^3.5.0"
   },
   "keywords": [
     "clear",
