--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+arch:
+    - amd64
+    - ppc64le
 sudo: false
 os:
   - linux
@@ -12,3 +15,10 @@ node_js:
   - '4'
   - '0.12'
   - '0.10'
+#Excluding below versions since they are not supported by ppc64le    
+jobs: 
+  exclude:
+    - node_js: "0.10"
+      arch: ppc64le
+    - node_js: "0.12"
+      arch: ppc64le  
